# CGJ-IndividualProject

./: .gitignore  CMakeLists.txt  README.md
dependencies/Assimp/lib/: assimp-vc143-mtd.exp
dependencies/GLFW/include/GLFW/: glfw3.h
dependencies/glm/include/glm/detail/: setup.hpp
dependencies/glm/include/glm/ext/: matrix_projection.inl  matrix_transform.hpp
dependencies/glm/include/glm/simd/: platform.h
dependencies/imgui/ini/: imgui.ini
dependencies/imguizmo/include/: ImGuizmo.h
dependencies/imguizmo/lib/: imguizmo.lib
dependencies/yaml-cpp/lib/: yaml-cppd.lib
resources/scenes/: Bull.scene  DefaultScene.scene  Spheres.scene  Teapots.scene  TransparentTeapots.scene
resources/shaders/: cube-fs.glsl  cube-vs.glsl  light-fs.glsl  light-vs.glsl  skybox-fs.glsl  skybox-vs.glsl  unlit-fs.glsl  unlit-vs.glsl
src/3DTangram/: 3DTangram.cpp  Entity.cpp  Entity.hpp  Material.cpp  Material.hpp  Scene.cpp  Scene.hpp  cube-fs.glsl
src/App/: Application.cpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/Entities/: Entity.cpp  Entity.hpp  Object.cpp  Object.hpp
src/Gui/: GuiManager.cpp  GuiManager.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp
src/gui/: GuiManager.cpp  GuiManager.hpp  Guizmo.cpp  Guizmo.hpp  RendererPanel.cpp  RendererPanel.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp
src/light/: Light.cpp  Light.hpp
src/materials/: Material.cpp  Material.hpp  MaterialsLibrary.cpp  MaterialsLibrary.hpp
src/mgl/: mgl.hpp  mglApp.cpp  mglCamera.cpp  mglCamera.hpp  mglConventions.hpp  mglMesh.cpp  mglMesh.hpp  mglShader.cpp
src/renderer/: FrameBuffer.cpp  FrameBuffer.hpp  Renderer.cpp  Renderer.hpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
src/scene/: Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/scene/entities/: Entity.cpp  Entity.hpp  Object.cpp  Object.hpp
src/textures/: SkyBox.cpp  SkyBox.hpp
